wrote java notes